--- a/src/rmd/pluck_cvlt3.Rmd
+++ b/src/rmd/pluck_cvlt3.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Pluck Tables from CVLT-3/CVLT-3 Brief"
 params:
-  patient: Biggie
+  patient: "{{< var patient >}}"
   test:
     label: "Test"
     value: cvlt3_brief
@@ -230,14 +230,6 @@ if (params$test == "cvlt3") {
 #   file = file,
 #   pages = c(18,20,18,18,18,22,18)
 # )
-```
-
-```{r save-areas}
-# saveRDS(area, here::here(patient, "pre_csv", "area_cvlt3.rds"))
-```
-
-```{r read-areas}
-# area <- readRDS(here::here(patient, "pre_csv", "area_cvlt3.rds"))
 ```
 
 ## Extract table
